service-cookie-setter.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-cookie-setter
  labels:
    app: k8s-dashboard-cookie-setter
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: k8s-dashboard-cookie-setter
