service-kubernetes-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  type: NodePort
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    k8s-app: kubernetes-dashboard
