cookie-setter-unified.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dashboard-cookie-setter
  labels:
    app: k8s-dashboard-cookie-setter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-dashboard-cookie-setter
  template:
    metadata:
      labels:
        app: k8s-dashboard-cookie-setter
    spec:
      containers:
        - name: jwe-cookie-setter
          image: deeps95/jwe-cookie-setter:1.0.1
          ports:
            - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-cookie-setter
  labels:
    app: k8s-dashboard-cookie-setter
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: k8s-dashboard-cookie-setter
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookie-setter
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: k8s-dashboard-cookie-setter
                port:
                  number: 80
            path: /jweToken.html
            pathType: Exact
