ingress-kubernetes-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_ssl_server_name on;
      proxy_ssl_name $host;
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 443
#  rules:
#    - http:
#        paths:
#          - backend:
#              service:
#                name: k8s-dashboard-cookie-setter
#                port:
#                  number: 443
#            path: /jweToken.html
#            pathType: Exact
