ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: kubernetes-dashboard
      port:
        number: 8443
  rules:
    - http:
        paths:
          - backend:
              service:
                name: k8s-dashboard-cookie-setter
                port:
                  number: 80
            path: /jweToken.html
            pathType: Exact
